Actually fixed the 👀 for touch

--- a/src/9.html
+++ b/src/9.html
@@ -43,16 +43,20 @@
 
       computeSize();
       window.addEventListener('resize', computeSize);
-      window.addEventListener('mousemove', e => {
-        mouseX = e.clientX;
-        mouseY = e.clientY;
+      window.addEventListener('mousemove', mouseEvent);
+      window.addEventListener('dragover', mouseEvent);
+      window.addEventListener('touchstart', e => {
+        mouseEvent(e.changedTouches[0])
       });
-      window.addEventListener('dragover', e => {
-        mouseX = e.clientX;
-        mouseY = e.clientY;
+      window.addEventListener('touchmove', e => {
+        mouseEvent(e.changedTouches[0])
       });
 
 
+      function mouseEvent(e) {
+        mouseX = e.clientX;
+        mouseY = e.clientY;
+      }
       function computeSize() {
         let docHeight = document.body.offsetHeight;
         let docWidth = document.body.offsetWidth;
