*screams at gh pages*

--- a/src/10.html
+++ b/src/10.html
@@ -16,7 +16,7 @@
 <body>
 <video id="stream" width="400" height="300" preload autoplay loop muted></video>
 <div id="overlay"></div>
-<script src="assets/face-api.js"></script>
+<script src="assets/face_api.js"></script>
 <script>
   (async () => {
     await faceapi.nets.tinyFaceDetector.loadFromUri('assets');
