--- a/src/9.html
+++ b/src/9.html
@@ -37,7 +37,7 @@
 <!--    <img id="stream" src="https://192.168.1.5:8080/video" height="150" width="200">-->
     <div id="overlay"></div>
     <canvas id="app"></canvas>
-    <script src="assets/face-api.js"></script>
+    <script src="assets/face_api.js"></script>
     <script>
       (async () => {
         let CONTROL_MODE = 'webcam';
