--- a/src/12.html
+++ b/src/12.html
@@ -9,7 +9,7 @@
             margin: 0;
             height: 100vh;
             width: 100vw;
-            background: #333;
+            background: #222;
             overflow: hidden;
         }
         #canvas {
@@ -27,8 +27,8 @@
                     el: canvas,
                     color = '#000',
                     mouseInteraction = false,
-                    size = 20,
-                    padding = 10
+                    size = 25,
+                    padding = 15
             }) {
                 const rotationFactor = 2;
                 const ctx = canvas.getContext('2d');
@@ -97,7 +97,8 @@
             }
             swirly({
                 el: document.getElementById('canvas'),
-                color: '#b35a24'
+                color: '#b35a24',
+                mouseInteraction: true
             })
         })();
     </script>
