--- a/src/13.html
+++ b/src/13.html
@@ -67,14 +67,17 @@
       <div class="side"></div>
     </div>
   </div>
-<!--  <div id="video">-->
-<!--  </div>-->
-  <iframe id="video" src="http://www.youtube.com/embed/dQw4w9WgXcQ?enablejsapi=1&origin=http://localhost:5000"></iframe>
+  <iframe id="video"></iframe>
+
   <script src="https://www.youtube.com/iframe_api" defer async></script>
+<!--  Loading & Video stuff-->
   <script type="application/javascript">
     // Handles loading and starting the <Insert witty thing here>
     (function () {
       let player;
+      const videoEl = document.getElementById('video');
+      videoEl.src = 'http://www.youtube.com/embed/dQw4w9WgXcQ?enablejsapi=1&origin=' + window.location.origin;
+
       window.countdownComplete = function () {
         console.log('Countdown complete, playing');
         player.playVideo();
@@ -92,14 +95,13 @@
       };
 
       // 4. The API will call this function when the video player is ready.
-      function onPlayerReady(event) {
+      function onPlayerReady() {
         console.log('Player Ready');
         player.playVideo();
         player.pauseVideo();
         // player.setLoop(true);
       }
-
-    })(window);
+    })();
 
     // This IIFE handles the loading screen. Calls window.countdownComplete after a bit, and hides itself
     (function () {
@@ -180,5 +182,7 @@
       render();
     })();
   </script>
+  <script type="text/javascript" src="https://www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"></script>
+
 </body>
 </html>
