Improve fader animation

--- a/src/11.html
+++ b/src/11.html
@@ -60,18 +60,24 @@
         transition: opacity 0.5s;
         opacity: 0;
       }
+      .fader-caption.entered {
+        bottom: 50px;
+      }
+      .fader-caption.on-leave {
+        bottom: 20px;
+      }
       .fader-caption {
         box-shadow: 0 0 20px 0 rgba(0,0,0,0.4);
         border-radius: 16px;
         padding: 8px 12px;
         color: #444;
         position: absolute;
-        bottom: 50px;
-        left: 70px;
+        bottom: 80px;
+        left: 80px;
         background: white;
         display: inline-block;
         z-index: 1;
-        transition: opacity 0.5s;
+        transition: opacity 0.4s ease-in, bottom 0.5s ease-out;
         opacity: 0;
       }
       .fader-caption h3 {
@@ -97,7 +103,7 @@
       <div class="hero-text">
         <h1>Asher Foster</h1>
         <p>Full stack web platform developer</p>
-        <a class="button" href="#">portfolio</a>
+        <a class="button" href="/portfolio">portfolio</a>
       </div>
       <div class="hero-image">
         <div class="fader-item">
@@ -112,11 +118,11 @@
           </div>
           <div class="fader-caption">
             <h3>developster</h3>
-            <p>empowering young entrepreneurs to create</p>
+            <p>technical lead and cofounder</p>
           </div>
           <div class="fader-caption">
             <h3>canal</h3>
-            <p>innovative solution for managing bot features</p>
+            <p>lead developer and founder</p>
           </div>
         </div>
       </div>
@@ -133,8 +139,16 @@
 
         function setItem(set, val) {
           set.forEach(item => {
+            if (val) item.classList.add('entered');
+            if (!val) {
+              item.classList.remove('entered');
+              item.classList.add('on-leave')
+            }
             item.style.opacity = val;
             item.style.zIndex = val;
+            if (!val) setTimeout(() => {
+              item.classList.remove('on-leave');
+            }, 500);
           })
         }
         setItem(items[0], 1);
@@ -142,7 +156,7 @@
           setItem(items[active], 0);
           active = (active + 1) % items.length;
           setItem(items[active], 1);
-        }, 3000);
+        }, 4000);
       })()
     </script>
   </body>
