--- a/src/14.html
+++ b/src/14.html
@@ -2,11 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>404: Page Found Unsuccessfully</title>
-<!--  <link rel="stylesheet" href="https://use.typekit.net/bzp7tos.css">-->
-
-<!--  <link href="https://fonts.googleapis.com/css?family=Hind:700&display=swap" rel="stylesheet">-->
-
+  <title>404: Page lost Successfully</title>
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,700|Roboto:400i&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
