--- a/src/6.html
+++ b/src/6.html
@@ -36,7 +36,7 @@
       const wrapper = document.getElementById("background-wrapper");
       let masterUnicorn = document.createElement("img"); // Obey the Master Unicorn, or else
       masterUnicorn.className = "falling-unicorn";
-      masterUnicorn.src = "assets/img/unicorn.png";
+      masterUnicorn.src = "assets/unicorn.png";
 
       const docWidth = document.body.clientWidth;
       const docHeight = document.body.clientHeight;
