this is why version pinning is a thing, folks

--- a/src/9.html
+++ b/src/9.html
@@ -37,7 +37,7 @@
         transition: all .2s;
       }
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 <!--    <script src="//cdn.jsdelivr.net/npm/vue"></script>-->
   </head>
   <body>
