--- a/src/9-config.html
+++ b/src/9-config.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Eyes Config</title>
-    <script src="//cdn.jsdelivr.net/npm/vue"></script>
+    <script src="//cdn.jsdelivr.net/npm/vue@2"></script>
     <style>
       html, body {
         height: 100vh;
